init garbage collector